commons_project/static/css/style.css
html {
    background-color: #fafafa;

}

body {
    margin: 0 auto;
    padding 0;
    width: 960px;
    font-family: helvetica, arial, sans-serif;
   /* background: url(http://www.smileycat.com/miaow/archives/images/misc/layout_grid.gif) top left no-repeat; */
    padding: 0;
    color: #403D3E;
    }

header {
 
    padding: .5em;
    margin: 0em;

}

strong {

    font-weight:600;
}

#content-wrapper{
    border: 1px solid #ddd;
   background-color: #fff;
    margin: .2em 0em 0em 0em;

}

h1 {
    font-size: 180%;
    margin: .4em 0em 0em .5em;
    font-weight:600;
}

#logo {
    margin: 0em 0em 0em 0em;
   
}
#logo a {
    color:#403D3E;
}

h2 {
    margin: .4em .3em .3em .8em;
    font-size: 140%;
    display: inline-block;
    font-weight:bolder;

}

h2 img {
    margin: 0em .3em 0em .1em;
}

h3 {
    margin: .2em .3em 1em 1.5em;
}

.profile {
    min-height: 60px;
    display: block;
}

.title_image {
    height: 5em;
    width: 5em;
    border: 1px solid #aaa;
    margin: 0 10px 20px 20px;
    float:left;
    clear: both;

}

.title_info {
    margin: 20px 0px 0px 0px;
    
}

.about ul{
    margin: 0px 0px 5px 0px;
    vertical-align: top;

}

.title_info h1 {

    /* vertical-align:top; */
    /* text-align:left; */
    margin-left: 110px;
    display: block;

}

.dep_section_head {
    margin: 2em 0em 0em 1.5em;

}

.dep_welcome_head {
    margin: 1.2em 0em .2em 0em;

}

.dep_spotlight_head {
    margin: 1.2em 0em .2em 2em;

}

#dep_welcome_text {
    margin: 0em 2em 0em 1em;
    padding: 0em 0em 0em 0em;
    

}

#welcome_text p {
    font-size: 120%;
    text-align: left;
    padding: 0em 0em 0em 0em;
}


ul {
    
    list-style:none;

    padding: 0;
}
ul li {}

.actions_features li{
    padding .7em 2em;
    text-decoration: none;
    margin: .6em 0em 0em 1em;
    vertical-align:top;

}

.actions_features li img {
    margin: 0em .3em 0em 0em;
    
}

.actions_features li a {
    margin: 0em .3em 0em 0em;
 
}
.actions_features {
    margin: 0em 0em 1em 0em;
}



a:link  {
    color:#3366aa; 
    text-decoration:none; 
}
a:visited           { color:#3366aa; text-decoration:none; }
a:hover             { color:#9E0B30; text-decoration:none; }
a:active            { color:#9E0B30; text-decoration:none; }

h2 a:visited {
    text-decoration: none;
}

#user {
    line-height:2em;
    float:right;
    white-space: nowrap;
    word-spacing: 1em;
    text-align:right;
    margin: 0em;

}
#user li a{
    padding: .4em 1em 0em 1em;

}

#breadcrumbs {
    margin-left:1em;
    display: none;
}

#share {
    float: right;
    
}

#share a {
margin-right:1em;
}


.right {
    float: right;
}

.nav-bar ul {

    padding 0;
   
     margin: 0em auto;
     list-style-type: none;
    margin: 0px 0px 0px 0px;
}

.nav-bar {
    display: block;
    clear:both;
    /*background-color: #eee;*/
     border: 1px solid #ddd;
     line-height:3em; 
     margin-bottom: .4em;
        background-color: #fff;     
    

}

.nav-bar ul li {
    display: inline-block;
    text-align:center;
    background-color: #fff;
}


.nav-bar ul li a{
 /*   height: 3em; */
    margin: 0 auto;
    padding: .8em .9em;
    color: #888;

    width:100%;
}

.nav-bar ul li a:hover {
    text-decoration: none;
    /* background-color:#aaa; */
}
.nav-bar ul li:hover {
    text-decoration: none;
    background-color:#eee;
    color:#aaa;
}

#rest-of-bar{
    width:100%

}

#search-nav  {
    float:right;
    padding: 0em .5em 0em 0em;
    
}

#bar-right:hover {
    background-color:#fff;

}

.input_field {
    color:#403D3E;
    width:300px;
     outline:none;
    resize:none;
	height:1.2em;
	padding: 10px 15px 5px 10px;
	 -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;


}

#search-field {

    color:#403D3E;
    width:300px;
     outline:none;
    resize:none;
	height:1.2em;
	padding: 10px 15px 5px 10px;
	 -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
	
}

.button {
   border-top: 1px solid #aaa;
   background: #777;
/*   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7)); */
/*   background: -moz-linear-gradient(top, #3e779d, #65a9d7); */
   padding: .5em .5em;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
   -webkit-box-shadow: #ddd 0 1px 0;
   -moz-box-shadow: #ddd 0 1px 0;
   box-shadow: #ddd 0 1px 0;
   text-shadow: rgba(0,0,0,.4) 0 1px 0;
   color: white;
   font-size: .8em;
   font-family: Helvetica, Arial, Sans-Serif;
   text-decoration: none;
   vertical-align: middle;
   }
.button:hover {
   border-top-color: #bbb;
   background: #777;
   color: #ccc;
   cursor:pointer;
   }
.button:active {
   border-top-color: #666;
   border-left-color: #666;
   border-bottom-color: #777;
   border-right-color: #777;
   background: #777;
    -webkit-box-shadow: rgba(0,0,0,1) 0 -1px 0;
   -moz-box-shadow: rgba(0,0,0,1) 0 -1px 0;
   box-shadow: rgba(0,0,0,1) 0 -1px 0;
   cursor:pointer;
   }


#top-alert {
    height:50px;
    margin: 0em;
    padding: 0em;
    background-color: #eee;
    display: none;
    position: relative;
    z-index:20;
   /* width:960px;
    top: 0px; */

}

#top-alert h2 {
   margin 3em 3em 3em 3em;
}



.sort-bar {
    height: 3em;
    margin: 2em 4em .4em 0em;
    background-color: #eee;
    padding: .2em 1em;
    
}

.sort-bar a {
    margin: .2em 2em .1em .1em;
    padding: 1em;
}

.list-filters {
    background-color:#eee;
    margin: 5.4em .7em 1em 2em;
    padding: .3em;
    height: 20em;
    text-align: center;
}

.app-list {
    margin: 0em .3em .1em .1em;
    padding: 0em 0em .1em .1em;

}
.app-list img {
    
    vertical-align: middle;

    

}
.app-list a {
    
    margin: .2em 2em .1em .1em;

}


.app-list li {

    display: list-item;
    list-style:none;
/*    height: 3em; */
   border-bottom: 1px solid #aaa;
   margin: 0em 0em 0em 0em;
    padding: .2em 0em .2em 0em;


}

.listed-app-name {
  
    vertical-align: middle;

}

.listed-app-name h3{
    display: block;
    font-size:120%;
    margin: 0em;
    
}

.comments-link {

    margin: 0em .3em;
}

.star-ratings {
    display: inline-block;
    margin: 0em 1em 0em 0em;

}
.applink {
    padding: .1em .1em .3em .2em;
    line-height: 1em;
     vertical-align: middle;
}

.full-width {
  /*    border: 1px solid green; */
    margin: 1.2em .2em 1.2em 1em;
    padding: .1em .2em .1em 1em;

}

.full-width p {
    margin:  0em 1em .5em 2em; 
}
.full-width h2 {
    margin:  0em 1em .5em 0em; 
}

.full-width ul {
  margin:  0em 1em .5em 1em; 
}
.full-width ul li {
  padding .7em 2em;
  text-decoration: none;
  margin: .6em 1em 0em 0em;
  vertical-align:top;
}
.full-width ul li a {
    margin: 0em .3em 0em 0em;
  
}

.left-col{

    margin: 0em 1em .5em 3em;
   padding: 0em 1em 0em 2em; 
}
.left-col p{
   
    font-size: 100%;
    text-align: center;

}
.right-col{

    margin: 0em 3em .5em 1em;
    padding:  0em 1em 0em 2em;
    
}
.two_col h2 {
    margin: 1em 0em .2em 0em;

}
.right-col p {

    font-size: 100%;
    text-align: center;
}

.centered {
    margin: 0em 1em 0em 1em;

}

.recent_activity {
    margin: 0em .3em .1em .1em;
    padding: 0em 0em .1em .1em;


}

.recent_activity h3{
  font-size:120%;
}

.map_form {
    font-size:120%;
    padding:1em;
    
}

.map_form span {
    margin: 0em .4em;
    font-size:140%;

}


.map {
    margin-bottom: 3em;
}

.map img {
    width: 100%
}

.map_list {
    margin: 2em .3em 0em 2em;
    border: 1px solid #ddd;
    padding: .3em;
    overflow: auto;
    height: 23em;

}

.map_list li {
    border-bottom: 1px solid #ddd;
    padding: .5em;
}

.subcats {
    margin: 1em 4em 4em 3em;
 border: 1px solid #ddd; 

}
.subcats p {
    margin: .2em 3em 6em 2em;
    font-size:120%;
}

.selected_cats{
    border-top: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-left: 1px solid #ddd;    
    border-bottom: 1px solid white;
    -webkit-border-radius:4px;
    border-radius:4px;
}
.category-strip {
/*    border: 1px solid #ddd;   */
    padding: 0em 1em auto;
    height: 100px;
    vertical-align: center;

}
.cat-strip-item {
    display: inline-block;

    width: 83px;
    height: 99px;
    margin: 0em 0em 0em 2.24em;
    text-align: center;
}
.cat-strip-item img {
    display:block;
    width: 75px;
    height: 75px;

    margin: 0 auto;    
    margin-top: 5px;
}

.cat-strip-item a {
    margin: 0 auto;
}

.media-gallery-1col{
    height: 300px;
    width: 400px;
    background-color: #fff;
    border: 1px solid #ddd;
    margin: .3em 0em .3em 0em;


}

.screenshot-strip {
/*    border: 1px solid black;   */
    margin-left: 3em;
    height: 3em;

}
.screenshot-strip li {
    display: inline-block;
    border: 1px solid #aaa;  
    width: 3em;
    height: 3em;
    margin: 0em .5em 0em 0em;
    text-align: center;
    background-color:pink;
}
.screenshot-strip-item img {
    display:block;
     width: 3em;
    height: 3em;

}

.jurisdictions { 
    height:10em;

}
.jurisdictions ul {
  /*     border: 1px solid #aaa; */
    margin: 0em 0em 0em 3em;

}

.user-strip {
/*    border: 1px solid black;   */
    margin-left: 1em;

    display:block;

}
.user-strip li {
    display: inline-block;
    border: 1px solid #aaa;  
    width: 3em;
    height: 3em;
    margin: 0em .5em 0em 0em;
    text-align: center;
}
.user-strip-item img {
    display:block;
     width: 3em;
    height: 3em;
    background-color:pink;
    

}

.seemore{
    float:right;
    margin: 0em 2.5em 1em 0em;
}

#djDebug{
letter-spacing:0;
word-spacing:0;

}

/* private beta invite signup page styling */    
    
#beta-invite-content {
    margin: 10px 0 20px 0;
    }
    
#link-button {
    background-color: #3366aa;
    color: white;
    font-size: 1.5em;
    font-weight: bold;
    display: block;
    text-align: center;
    padding: 10px 30px;
    }
#link-button:hover { 
    background-color:#9E0B30; cursor:pointer; 
    }

#link-button:active { 
    background-color:#9E0B30; cursor:pointer;
    }
    
#id_email {
    margin-left: 7px;
    color:#403D3E;
    width:250px;
     outline:none;
    resize:none;
    height:1.2em;
    padding: 10px 15px 5px 10px;
     -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
    }
    
/* end private beta stuff */

.footer {
    margin: 0em 0em .2em 0em;
/*    padding: .4em; 
    text-align: center;*/

}

.footer p {
    margin: .2em 0em 1em 0em;

}

.footer img {
    height: 70px;
    float: left;

}
.collab img {
    height: 50px;
    display: inline-block;
    margin-top: 10px;
}

#slider {
    position:relative;
    width:400px; /* Change this to your images width */
    height:300px; /* Change this to your images height */
    background:url(..img/loading.gif) no-repeat 50% 50%;
    border: 1px solid #ddd;
}
#slider img {
    position:absolute;
    top:0px;
    left:0px;
    display:none;
}
#slider a {
    border:0;
    display:block;
}

